# add_char_gen

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Kitty-Buddy.agent.md  brainstorming-architect.agent.md  coding-buddy.md  spec-architect.agent.md
.github/buddy/: context.md  execution_log.md  progress.md  research_log.md  thinking_log.md
.github/workflows/: ci.yml
data/: osric_characters.db
docs/: INDEX.md
docs/specs/: 01-functional-specification.md  02-technical-specification.md  03-game-data-reference.md  04-level-choice-specification.md  05-magical-items-specification.md  06-character-sheet-manager-specification.md
src/osric_character_gen/: main.py
tests/: conftest.py
tests/test_api/: test_campaign_endpoint.py  test_character_manager_endpoint.py  test_characters_endpoint.py  test_frontend.py  test_frontend_manager.py  test_landing_page.py
tests/test_data/: test_magical_items_tables.py  test_tables_integrity.py
tests/test_domain/: test_ancestry_selector.py  test_class_selector.py  test_coin_purse.py  test_dice.py  test_equipment_purchaser.py  test_magical_item_generator.py  test_name_generator.py  test_physical_generator.py  test_spell_selector.py  test_stats_calculator.py
tests/test_persistence/: test_campaign_repository.py  test_character_repository.py  test_database.py
tests/test_security/: test_key_generation.py
tests/test_services/: test_campaign_service.py  test_character_generator.py  test_character_manager.py
(+40 files in other folders)
